# bulwark-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
entry/: main.cpp
include/Bulwark/: application.h
include/bulwark/: input.h
src/: application.cpp  input.cpp  main.cpp  window.cpp
src/engine/: application.cpp  application.h  main.cpp  window.h
tools/project-creator/: __main__.py
